[tool.poetry]
name = "tmeit_backend"
version = "0.9.2"
description = "Python backend for the TMEIT website"
authors = ["TraditionsMEsterIT"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
sqlalchemy = {version = "2.0.0b2", extras = ["postgresql_asyncpg"]}
asyncpg = "0.25.0"
argon2-cffi = "^21.3.0"
python-multipart = "^0.0.5"
pytest-asyncio = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
alembic = "^1.7.7"
hypothesis = "^6.46.11"
requests = "^2.27.1"

[tool.poetry.group.migrate.dependencies]
asyncmy = "^0.2.5"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

