[tool.poetry]
name = "tmeit_backend"
version = "1.0.2"
description = "Python backend for the TMEIT website"
authors = ["TraditionsMEsterIT"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = {extras = ["standard"], version = "^0.18.3"}
sqlalchemy = {version = "2.0.0b2", extras = ["postgresql_asyncpg"]}
asyncpg = "0.27.0"
argon2-cffi = "^21.3.0"
python-multipart = "^0.0.5"
arq = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
alembic = "^1.8.1"
hypothesis = "^6.46.11"
requests = "^2.27.1"
pytest-asyncio = "^0.18.3"

[tool.poetry.group.migrate.dependencies]
asyncmy = "^0.2.5"

[tool.poetry.group.arq-worker.dependencies]
pydantic = {extras = ["email"], version = "^1.10.2"}
sqlalchemy = {version = "2.0.0b2", extras = ["postgresql_asyncpg"]}
asyncpg = "0.27.0"
python-multipart = "^0.0.5"
arq = "^0.24.0"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

